# llm_traced_app

./: README.md  app.py  llm_chain.py  pyproject.toml  requirements.txt  tracing_setup.py
docker/: docker-compose.yml
